[package]
name = "nv-attestation-sdk-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Raw FFI bindings for the NVIDIA Attestation SDK"
documentation = "https://docs.nvidia.com/attestation/nv-attestation-sdk-rust/latest/overview.html"
links = "nvat"

[build-dependencies]
bindgen = "0.72.1"

[dependencies]
# No dependencies for raw bindings
